Fixed Header Spacing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,6 +1,16 @@
+
 .header-link{
   padding: 10px 10px 12px 40px;
   color: $gold-orange;
+  font-family: "Merriweather";
+  display: flex;
+  h2{
+    font-size: 40px;
+  }
+
+  i{
+    font-size: 2.5em;
+  }
 }
 
 
@@ -13,11 +23,13 @@
     display:flex;
     justify-content: flex-start;
     width:50%;
+    min-width: 400px;
   }
   .header-right{
     display:flex;
     justify-content: flex-end;
     width:50%;
+    min-width: 480px;
 
 
   }
